[tool.ruff.lint]
extend-select = ["I"]

[tool.poetry]
name = "mtkruto"
version = "0.2.4"
description = "Python client for MTKruto Server"
authors = ["Roj", "Zaid"]
readme = "README.md"

[tool.mypy]
strict = true
warn_return_any = false

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.10.2"

[tool.poetry.group.dev.dependencies]
mypy = "^1.10.0"
ruff = "^0.4.3"

[tool.poetry.group.test.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
